--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -83,6 +83,13 @@
                 android:contentDescription="@string/orderTravel"
                 android:onClick="openFormClick"
                 android:src="@drawable/ic_baseline_add_24" />
+            <!--<Button
+                android:id="@+id/btnOpenForm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:text="@string/orderTravel" />-->
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
