--- a/app/src/main/res/layout/activity_add_travel.xml
+++ b/app/src/main/res/layout/activity_add_travel.xml
@@ -2,42 +2,73 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/orange_background">
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="5dp"
-        tools:context=".ui.addTravelActivity.AddTravelActivity"
-        >
+        android:padding="15dp"
+        tools:context=".ui.addTravelActivity.AddTravelActivity">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/assistant_semibold"
+            android:gravity="center"
+            android:text="@string/enterTravelDetales"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:inputType="textPersonName"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:hint="@string/ETPersonName"
             android:background="@drawable/custom_input"
             android:ems="10"
             android:drawablePadding="10dp"
-            android:drawableLeft="@drawable/ic__account_circle"
-            android:drawableStart="@drawable/ic__account_circle" />
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:drawableLeft="@drawable/custom_user_ic"
+            android:drawableStart="@drawable/custom_user_ic"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/et_phone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:inputType="phone"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:hint="@string/et_phone"
             android:ems="10"
             android:background="@drawable/custom_input"
             android:layout_marginTop="15dp"
             android:drawablePadding="10dp"
-            android:drawableLeft="@drawable/ic_phone"
-            android:drawableStart="@drawable/ic_phone" />
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:drawableLeft="@drawable/custom_phone_ic"
+            android:drawableStart="@drawable/custom_phone_ic" />
+
+        <EditText
+            android:id="@+id/et_mail"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:inputType="phone"
+            android:textSize="18sp"
+            android:hint="@string/mailAdress"
+            android:ems="10"
+            android:background="@drawable/custom_input"
+            android:layout_marginTop="15dp"
+            android:drawablePadding="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:drawableLeft="@drawable/custom_mail_ic"
+            android:drawableStart="@drawable/custom_mail_ic" />
 
     </LinearLayout>
 </ScrollView>
