--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ADD8E6"
+        android:background="@color/light_blue"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:textDirection="rtl">
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:backgroundTint="#FF8C00"
+                android:backgroundTint="@color/orange"
                 android:layout_margin="16dp"
                 android:contentDescription="@string/orderTravel"
                 android:onClick="openFormClick"
