--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue">#ADD8E6</color>
     <color name="darker_gray">#AAAAAA</color>
+    <color name="orange">#FF8C00</color>
 </resources>
