--- a/app/src/main/res/layout/activity_add_travel.xml
+++ b/app/src/main/res/layout/activity_add_travel.xml
@@ -159,7 +159,6 @@
 
             <EditText
                 android:id="@+id/et_returnDate"
-                android:focusable="false"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_margin="15dp"
@@ -174,7 +173,8 @@
                 android:paddingEnd="10dp"
                 android:textSize="18sp"
                 android:layout_marginLeft="6dp"
-                android:layout_marginStart="6dp"/>
+                android:layout_marginStart="6dp"
+                android:focusable="false"/>
 
         </LinearLayout>
 
