--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="light_blue">#ADD8E6</color>
     <color name="darker_gray">#AAAAAA</color>
     <color name="orange">#FF8C00</color>
+    <color name="green">#78C257</color>
+    <color name="light_green">#B9D7AC</color>
 </resources>
